2006-06-08  Nathan Sidwell  <nathan@codesourcery.com>

	* gdb/remote.c (remote_open_1): Do preopen tasks before
	irreversably destroying state.

2006-06-08  Daniel Jacobowitz  <dan@codesourcery.com>

	* (struct remote_state): New type, only containing
	buf and buf_size.
	(remote_state): New variable.
	(get_remote_state): New function.
	(struct remote_arch_state): Renamed from struct remote_state.
	Removed buf and buf_size.
	(get_remote_arch_state): Renamed from get_remote_state.  All
	necessary callers updated to call this function.
	(init_remote_state): Initialize the architecture-specific state.
	Update the target-specific state if necessary.
	(get_remote_packet_size): New function.  All previous references
	changed to use this accessor function.
	(packet_reg_from_regnum, packet_reg_from_pnum): Take a
	remote_arch_state instead of a remote_state.  All callers changed.
	(_initialize_remote): Initialize the packet buffer here.

2006-06-06  Nathan Sidwell  <nathan@codesourcery.com>

	* remote.c (remote_insert_watchpoint): Return -1, rather than
	fatal error if packet is disabled.
	(remote_remove_watchpoint, remote_insert_hw_breakpoint,
	remote_remove_hw_breakpoint): Likewise.

2006-06-02  Nick Roberts  <nickrob@snap.net.nz>

	* breakpoint.c (print_it_typical): Use EXEC_ASYNC_LOCATION_REACHED.

2006-05-31  Michael Snyder  <msnyder@redhat.com>

	* mips-tdep.c: Comment tweaks.

2006-05-31  Daniel Jacobowitz  <dan@codesourcery.com>

	* Makefile.in (top_builddir): Update comments.
	(INTL_DIR, INTL_SRC): Delete.
	(INTL, INTL_DEPS, INTL_CFLAGS): Update.
	* acinclude.m4: Include new gettext macros.
	* configure.ac: Use ZW_GNU_GETTEXT_SISTER_DIR.  Remove copied
	CATALOGS code.
	* aclocal.m4, configure: Regenerated.

2006-05-30  Daniel Jacobowitz  <dan@codesourcery.com>

	* Makefile.in (arm-linux-nat.o): Update dependencies.
	* arm-linux-nat.c: Include "gdb_proc_service.h".
	(PTRACE_GET_THREAD_AREA): Define.
	(ps_get_thread_area): New function.
